Run Safari render tests on Apple Silicon

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -492,6 +492,7 @@ jobs:
 
   test-render-mac-safari-dev:
     <<: *mac-defaults
+    resource_class: macos.m1.large.gen1
     parallelism: 3
     steps:
       - attach_workspace:
