--- a/.flowconfig
+++ b/.flowconfig
@@ -30,9 +30,10 @@
 .*/test/build/downstream-flow-fixture/.*
 
 [version]
-0.188.0
+0.189.0
 
 [options]
+enforce_local_inference_annotations=false
 
 [strict]
 nonstrict-import
