Add Safari WebGL2 render tests

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -149,13 +149,19 @@ workflows:
           filters:
             tags:
               only: /.*/
+      - test-render-mac-chrome-webgl2-dev:
+          requires:
+            - prepare-mac
+          filters:
+            tags:
+              only: /.*/
       - test-render-mac-safari-dev:
           requires:
             - prepare-mac
           filters:
             tags:
               only: /.*/
-      - test-render-mac-chrome-webgl2-dev:
+      - test-render-mac-safari-webgl2-dev:
           requires:
             - prepare-mac
           filters:
@@ -490,18 +496,6 @@ jobs:
       - store_artifacts:
           path: "test/integration/render-tests/index.html"
 
-  test-render-mac-safari-dev:
-    <<: *mac-defaults
-    resource_class: macos.m1.large.gen1
-    steps:
-      - attach_workspace:
-          at: ~/
-      - run: yarn run test-render-safari
-      - store_test_results:
-          path: test/integration/render-tests
-      - store_artifacts:
-          path: "test/integration/render-tests/index.html"
-
   test-render-mac-chrome-webgl2-dev:
     <<: *mac-defaults
     parallelism: 3
@@ -514,6 +508,30 @@ jobs:
           command: |
             circleci tests glob "test/integration/render-tests/**/*.json" | circleci tests split --split-by=timings > tests-to-run.txt
       - run: USE_WEBGL2=true yarn run test-render
+      - store_test_results:
+          path: test/integration/render-tests
+      - store_artifacts:
+          path: "test/integration/render-tests/index.html"
+
+  test-render-mac-safari-dev:
+    <<: *mac-defaults
+    resource_class: macos.m1.large.gen1
+    steps:
+      - attach_workspace:
+          at: ~/
+      - run: yarn run test-render-safari
+      - store_test_results:
+          path: test/integration/render-tests
+      - store_artifacts:
+          path: "test/integration/render-tests/index.html"
+
+  test-render-mac-safari-webgl2-dev:
+    <<: *mac-defaults
+    resource_class: macos.m1.large.gen1
+    steps:
+      - attach_workspace:
+          at: ~/
+      - run: USE_WEBGL2=true yarn run test-render-safari
       - store_test_results:
           path: test/integration/render-tests
       - store_artifacts:
