Switch to Apple Silicon to run Safari render tests in the CI (#12613)
* Run Safari render tests on Apple Silicon

* Increase allowed value for 3 render tests

* Remove parallelism in Safari render tests

* Add Safari WebGL2 render tests

* Update macOS to 13.2 (Ventura)

* Use macos.x86.medium.gen2 by default

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -155,6 +155,18 @@ workflows:
           filters:
             tags:
               only: /.*/
+      - test-render-mac-safari-dev:
+          requires:
+            - prepare-mac
+          filters:
+            tags:
+              only: /.*/
+      - test-render-mac-safari-webgl2-dev:
+          requires:
+            - prepare-mac
+          filters:
+            tags:
+              only: /.*/
       - prepare-windows:
           filters:
             tags:
@@ -172,9 +184,12 @@ linux-defaults: &linux-defaults
   working_directory: ~/mapbox-gl-js
 
 mac-defaults: &mac-defaults
+  resource_class: macos.x86.medium.gen2
   macos:
     # https://circleci.com/docs/using-macos/#supported-xcode-versions
-    xcode: 14.2.0 # macOS 12.6 (Monterey)
+    xcode: 14.3.0 # macOS 13.2 (Ventura)
+  environment:
+    HOMEBREW_NO_AUTO_UPDATE: 1
   working_directory: ~/mapbox-gl-js
 
 windows-defaults: &windows-defaults
@@ -494,6 +509,30 @@ jobs:
           command: |
             circleci tests glob "test/integration/render-tests/**/*.json" | circleci tests split --split-by=timings > tests-to-run.txt
       - run: USE_WEBGL2=true yarn run test-render
+      - store_test_results:
+          path: test/integration/render-tests
+      - store_artifacts:
+          path: "test/integration/render-tests/index.html"
+
+  test-render-mac-safari-dev:
+    <<: *mac-defaults
+    resource_class: macos.m1.large.gen1
+    steps:
+      - attach_workspace:
+          at: ~/
+      - run: yarn run test-render-safari
+      - store_test_results:
+          path: test/integration/render-tests
+      - store_artifacts:
+          path: "test/integration/render-tests/index.html"
+
+  test-render-mac-safari-webgl2-dev:
+    <<: *mac-defaults
+    resource_class: macos.m1.large.gen1
+    steps:
+      - attach_workspace:
+          at: ~/
+      - run: USE_WEBGL2=true yarn run test-render-safari
       - store_test_results:
           path: test/integration/render-tests
       - store_artifacts:
