--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -545,9 +545,10 @@ jobs:
       - run:
           name: Install Node.js and npm
           command: |
+            choco uninstall nvm
+            choco uninstall nodejs
             $nodeVersion = Get-Content .nvmrc -Raw
             choco install nodejs --version $nodeVersion
-            $env:Path = [System.Environment]::GetEnvironmentVariable("Path","Machine") + ";" + [System.Environment]::GetEnvironmentVariable("Path","User")
             refreshenv
       - run:
           name: Install Yarn
