--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -545,8 +545,7 @@ jobs:
       - run:
           name: Install Node.js and npm
           command: |
-            choco uninstall nvm
-            choco uninstall nodejs
+            choco uninstall nvm nvm.portable nodejs
             $nodeVersion = Get-Content .nvmrc -Raw
             choco install nodejs --version $nodeVersion
             refreshenv
