--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -521,6 +521,10 @@ jobs:
     steps:
       - attach_workspace:
           at: ~/
+      - run:
+          name: Creating test list
+          command: |
+            circleci tests glob "test/integration/render-tests/**/*.json" | circleci tests split --split-by=timings > tests-to-run.txt
       - run: yarn run test-render-safari
       - store_test_results:
           path: test/integration/render-tests
@@ -534,6 +538,10 @@ jobs:
     steps:
       - attach_workspace:
           at: ~/
+      - run:
+          name: Creating test list
+          command: |
+            circleci tests glob "test/integration/render-tests/**/*.json" | circleci tests split --split-by=timings > tests-to-run.txt
       - run: USE_WEBGL2=true yarn run test-render-safari
       - store_test_results:
           path: test/integration/render-tests
