--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -121,7 +121,7 @@ workflows:
           filters:
             tags:
               only: /.*/
-      - test-render-linux-firefox-dev:
+      - test-render-linux-chrome-webgl1-dev:
           requires:
             - prepare-linux
           filters:
@@ -139,6 +139,18 @@ workflows:
           filters:
             tags:
               only: /.*/
+      - test-render-linux-firefox-dev:
+          requires:
+            - prepare-linux
+          filters:
+            tags:
+              only: /.*/
+      - test-render-linux-firefox-webgl1-dev:
+          requires:
+            - prepare-linux
+          filters:
+            tags:
+              only: /.*/
       - prepare-mac:
           filters:
             tags:
@@ -149,7 +161,7 @@ workflows:
           filters:
             tags:
               only: /.*/
-      - test-render-mac-chrome-webgl2-dev:
+      - test-render-mac-chrome-webgl1-dev:
           requires:
             - prepare-mac
           filters:
@@ -161,7 +173,7 @@ workflows:
           filters:
             tags:
               only: /.*/
-      - test-render-mac-safari-webgl2-dev:
+      - test-render-mac-safari-webgl1-dev:
           requires:
             - prepare-mac
           filters:
@@ -423,6 +435,21 @@ jobs:
       - store_artifacts:
           path: "test/integration/render-tests/index.html"
 
+  test-render-linux-chrome-webgl1-dev:
+    <<: *linux-defaults
+    steps:
+      - attach_workspace:
+          at: ~/
+      - browser-tools/install-chrome
+      - run:
+          name: Running tests in parallel
+          command: |
+            USE_WEBGL2=false yarn run test-render
+      - store_test_results:
+          path: test/integration/render-tests
+      - store_artifacts:
+          path: "test/integration/render-tests/index.html"
+
   test-render-linux-chrome-prod:
     <<: *linux-defaults
     steps:
@@ -454,6 +481,18 @@ jobs:
           at: ~/
       - browser-tools/install-firefox
       - run: yarn run test-render-firefox
+      - store_test_results:
+          path: test/integration/render-tests
+      - store_artifacts:
+          path: "test/integration/render-tests/index.html"
+
+  test-render-linux-firefox-webgl1-dev:
+    <<: *linux-defaults
+    steps:
+      - attach_workspace:
+          at: ~/
+      - browser-tools/install-firefox
+      - run: USE_WEBGL2=false yarn run test-render-firefox
       - store_test_results:
           path: test/integration/render-tests
       - store_artifacts:
@@ -497,7 +536,7 @@ jobs:
       - store_artifacts:
           path: "test/integration/render-tests/index.html"
 
-  test-render-mac-chrome-webgl2-dev:
+  test-render-mac-chrome-webgl1-dev:
     <<: *mac-defaults
     parallelism: 3
     steps:
@@ -508,7 +547,7 @@ jobs:
           name: Creating test list
           command: |
             circleci tests glob "test/integration/render-tests/**/*.json" | circleci tests split --split-by=timings > tests-to-run.txt
-      - run: USE_WEBGL2=true yarn run test-render
+      - run: USE_WEBGL2=false yarn run test-render
       - store_test_results:
           path: test/integration/render-tests
       - store_artifacts:
@@ -526,13 +565,13 @@ jobs:
       - store_artifacts:
           path: "test/integration/render-tests/index.html"
 
-  test-render-mac-safari-webgl2-dev:
+  test-render-mac-safari-webgl1-dev:
     <<: *mac-defaults
     resource_class: macos.m1.large.gen1
     steps:
       - attach_workspace:
           at: ~/
-      - run: USE_WEBGL2=true yarn run test-render-safari
+      - run: USE_WEBGL2=false yarn run test-render-safari
       - store_test_results:
           path: test/integration/render-tests
       - store_artifacts:
