--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@rollup/plugin-node-resolve": "^15.0.0",
     "@rollup/plugin-replace": "^5.0.0",
     "@rollup/plugin-strip": "^3.0.0",
+    "@rollup/plugin-terser": "^0.4.1",
     "address": "^1.2.0",
     "browserify": "^17.0.0",
     "chalk": "^5.0.1",
@@ -85,7 +86,6 @@
     "qrcode-terminal": "^0.12.0",
     "rollup": "^3.21.7",
     "rollup-plugin-sourcemaps": "^0.6.3",
-    "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-unassert": "^0.6.0",
     "selenium-webdriver": "^4.8.0",
     "serve-static": "^1.15.0",
