--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -101,26 +101,26 @@ workflows:
               ignore: /.*/
             branches:
               only: main
-      - deploy-benchmarks:
-          requires:
-            - install-mbx-ci
-            - build
-          filters:
-            tags:
-              only: /v[0-9]+.[0-9]+.[0-9]+(-.+)?/
-            branches:
-              only:
-                - main
-                - /release-.*/
-      - deploy-release:
-          requires:
-            - install-mbx-ci
-            - build
-          filters:
-            tags:
-              only: /v[0-9]+.[0-9]+.[0-9]+(-.+)?/
-            branches:
-              ignore: /.*/
+      # - deploy-benchmarks:
+      #     requires:
+      #       - install-mbx-ci
+      #       - build
+      #     filters:
+      #       tags:
+      #         only: /v[0-9]+.[0-9]+.[0-9]+(-.+)?/
+      #       branches:
+      #         only:
+      #           - main
+      #           - /release-.*/
+      # - deploy-release:
+      #     requires:
+      #       - install-mbx-ci
+      #       - build
+      #     filters:
+      #       tags:
+      #         only: /v[0-9]+.[0-9]+.[0-9]+(-.+)?/
+      #       branches:
+      #         ignore: /.*/
       - test-render-linux-chrome-dev:
           requires:
             - prepare-linux
