--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -121,7 +121,7 @@ workflows:
           filters:
             tags:
               only: /.*/
-      - test-render-linux-chrome-webgl1-dev:
+      - test-render-linux-firefox-dev:
           requires:
             - prepare-linux
           filters:
@@ -139,18 +139,6 @@ workflows:
           filters:
             tags:
               only: /.*/
-      - test-render-linux-firefox-dev:
-          requires:
-            - prepare-linux
-          filters:
-            tags:
-              only: /.*/
-      - test-render-linux-firefox-webgl1-dev:
-          requires:
-            - prepare-linux
-          filters:
-            tags:
-              only: /.*/
       - prepare-mac:
           filters:
             tags:
@@ -161,7 +149,7 @@ workflows:
           filters:
             tags:
               only: /.*/
-      - test-render-mac-chrome-webgl1-dev:
+      - test-render-mac-chrome-webgl2-dev:
           requires:
             - prepare-mac
           filters:
@@ -173,7 +161,7 @@ workflows:
           filters:
             tags:
               only: /.*/
-      - test-render-mac-safari-webgl1-dev:
+      - test-render-mac-safari-webgl2-dev:
           requires:
             - prepare-mac
           filters:
@@ -435,21 +423,6 @@ jobs:
       - store_artifacts:
           path: "test/integration/render-tests/index.html"
 
-  test-render-linux-chrome-webgl1-dev:
-    <<: *linux-defaults
-    steps:
-      - attach_workspace:
-          at: ~/
-      - browser-tools/install-chrome
-      - run:
-          name: Running tests in parallel
-          command: |
-            USE_WEBGL2=false yarn run test-render
-      - store_test_results:
-          path: test/integration/render-tests
-      - store_artifacts:
-          path: "test/integration/render-tests/index.html"
-
   test-render-linux-chrome-prod:
     <<: *linux-defaults
     steps:
@@ -481,18 +454,6 @@ jobs:
           at: ~/
       - browser-tools/install-firefox
       - run: yarn run test-render-firefox
-      - store_test_results:
-          path: test/integration/render-tests
-      - store_artifacts:
-          path: "test/integration/render-tests/index.html"
-
-  test-render-linux-firefox-webgl1-dev:
-    <<: *linux-defaults
-    steps:
-      - attach_workspace:
-          at: ~/
-      - browser-tools/install-firefox
-      - run: USE_WEBGL2=false yarn run test-render-firefox
       - store_test_results:
           path: test/integration/render-tests
       - store_artifacts:
@@ -536,7 +497,7 @@ jobs:
       - store_artifacts:
           path: "test/integration/render-tests/index.html"
 
-  test-render-mac-chrome-webgl1-dev:
+  test-render-mac-chrome-webgl2-dev:
     <<: *mac-defaults
     parallelism: 3
     steps:
@@ -547,7 +508,7 @@ jobs:
           name: Creating test list
           command: |
             circleci tests glob "test/integration/render-tests/**/*.json" | circleci tests split --split-by=timings > tests-to-run.txt
-      - run: USE_WEBGL2=false yarn run test-render
+      - run: USE_WEBGL2=true yarn run test-render
       - store_test_results:
           path: test/integration/render-tests
       - store_artifacts:
@@ -565,13 +526,13 @@ jobs:
       - store_artifacts:
           path: "test/integration/render-tests/index.html"
 
-  test-render-mac-safari-webgl1-dev:
+  test-render-mac-safari-webgl2-dev:
     <<: *mac-defaults
     resource_class: macos.m1.large.gen1
     steps:
       - attach_workspace:
           at: ~/
-      - run: USE_WEBGL2=false yarn run test-render-safari
+      - run: USE_WEBGL2=true yarn run test-render-safari
       - store_test_results:
           path: test/integration/render-tests
       - store_artifacts:
