Fix Loaders URL in Workers (internal-612)
* Fix Loaders URL in Workers

* Use loaders from CDN when not in watch mode

--- a/package.json
+++ b/package.json
@@ -124,25 +124,25 @@
     "watch-benchmarks": "BENCHMARK_VERSION=${BENCHMARK_VERSION:-\"$(git rev-parse --abbrev-ref HEAD) $(git rev-parse --short=7 HEAD)\"} rollup -c bench/rollup_config_benchmarks.js -w",
     "build-loaders": "rollup -c rollup.config.loaders.js",
     "start-server": "st --no-cache -H 0.0.0.0 --port 9966 --index index.html .",
-    "start": "run-p build-token watch-css watch-dev watch-benchmarks start-server",
-    "start-debug": "run-p build-token watch-css watch-dev start-server",
-    "start-bench": "run-p build-token watch-benchmarks start-server",
-    "start-release": "run-s build-token build-prod-min build-css print-release-url start-server",
+    "start": "run-p build-token build-loaders watch-css watch-dev watch-benchmarks start-server",
+    "start-debug": "run-p build-token build-loaders watch-css watch-dev start-server",
+    "start-bench": "run-p build-token build-loaders watch-benchmarks start-server",
+    "start-release": "run-s build-token build-loaders build-prod-min build-css print-release-url start-server",
     "lint": "eslint --cache --ignore-path .gitignore src test bench 3d-style debug/*.html",
     "lint-css": "stylelint 'src/css/mapbox-gl.css'",
     "test": "run-s lint lint-css test-flow test-unit",
-    "test-suite": "run-s test-render test-query test-expressions",
+    "test-suite": "run-s build-loaders test-render test-query test-expressions",
     "test-suite-clean": "find test/integration/{render,query, expressions}-tests -mindepth 2 -type d -exec test -e \"{}/actual.png\" \\; -not \\( -exec test -e \"{}/style.json\" \\; \\) -print | xargs -t rm -r",
     "test-unit": "build/run-tap --reporter classic --no-coverage test/unit",
     "test-build": "build/run-tap --no-coverage test/build/**/*.test.js",
     "test-browser": "build/run-tap --jobs=1 --reporter spec --no-coverage -- test/browser/**/*.test.js",
-    "watch-render": "cross-env SUITE_NAME=render testem -f test/integration/testem/testem.js",
+    "watch-render": "npm run build-loaders && cross-env SUITE_NAME=render testem -f test/integration/testem/testem.js",
     "watch-query": "SUITE_NAME=query testem -f test/integration/testem/testem.js",
-    "test-render": "cross-env SUITE_NAME=render testem ci -f test/integration/testem/testem.js",
-    "test-render-firefox": "cross-env BROWSER=Firefox SUITE_NAME=render testem ci -f test/integration/testem/testem.js",
-    "test-render-safari": "cross-env BROWSER=Safari SUITE_NAME=render testem ci -f test/integration/testem/testem.js",
-    "test-render-prod": "BUILD=production SUITE_NAME=render testem ci -f test/integration/testem/testem.js",
-    "test-render-csp": "BUILD=csp SUITE_NAME=render testem ci -f test/integration/testem/testem.js",
+    "test-render": "npm run build-loaders && cross-env SUITE_NAME=render testem ci -f test/integration/testem/testem.js",
+    "test-render-firefox": "npm run build-loaders && cross-env BROWSER=Firefox SUITE_NAME=render testem ci -f test/integration/testem/testem.js",
+    "test-render-safari": "npm run build-loaders && cross-env BROWSER=Safari SUITE_NAME=render testem ci -f test/integration/testem/testem.js",
+    "test-render-prod": "npm run build-loaders && BUILD=production SUITE_NAME=render testem ci -f test/integration/testem/testem.js",
+    "test-render-csp": "npm run build-loaders && BUILD=csp SUITE_NAME=render testem ci -f test/integration/testem/testem.js",
     "test-query": "SUITE_NAME=query testem ci -f test/integration/testem/testem.js",
     "test-expressions": "build/run-node test/expression.test.js",
     "test-flow": "build/run-node build/generate-flow-typed-style-spec && flow .",
