--- a/src/style-spec/package.json
+++ b/src/style-spec/package.json
@@ -47,7 +47,10 @@
     "json-stringify-pretty-compact": "^2.0.0",
     "minimist": "^1.2.6",
     "rw": "^1.3.3",
-    "sort-object": "^0.3.2"
+    "sort-object": "^0.3.2",
+    "quickselect": "^2.0.0",
+    "tinyqueue": "^2.0.3",
+    "cheap-ruler": "^3.0.1"
   },
   "sideEffects": false
 }
