--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -382,7 +382,8 @@ jobs:
     steps:
       - attach_workspace:
           at: ~/
-      - browser-tools/install-browser-tools
+      - browser-tools/install-browser-tools:
+          chrome-version: "114.0.5735.90"
       - run: yarn run build-token
       - run:
           name: Test Chrome
