Add Style Spec License (internal-684)

--- a/src/style-spec/package.json
+++ b/src/style-spec/package.json
@@ -8,7 +8,7 @@
     "mapbox-gl",
     "mapbox-gl-js"
   ],
-  "license": "ISC",
+  "license": "SEE LICENSE IN LICENSE.txt",
   "main": "./dist/index.cjs",
   "module": "./dist/index.es.js",
   "type": "module",
