--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
     "url": "git://github.com/mapbox/mapbox-gl-js.git"
   },
   "dependencies": {
-    "@loaders.gl/3d-tiles": "^3.3.0",
-    "@loaders.gl/core": "^3.3.0",
-    "@loaders.gl/gltf": "^3.3.0",
+    "@loaders.gl/3d-tiles": "3.3.0",
+    "@loaders.gl/core": "3.3.0",
+    "@loaders.gl/gltf": "3.3.0",
     "@mapbox/geojson-rewind": "^0.5.2",
     "@mapbox/jsonlint-lines-primitives": "^2.0.2",
     "@mapbox/mapbox-gl-supported": "^2.0.1",
