--- a/package.json
+++ b/package.json
@@ -11,9 +11,6 @@
     "url": "git://github.com/mapbox/mapbox-gl-js.git"
   },
   "dependencies": {
-    "@loaders.gl/3d-tiles": "3.3.0",
-    "@loaders.gl/core": "3.3.0",
-    "@loaders.gl/gltf": "3.3.0",
     "@mapbox/geojson-rewind": "^0.5.2",
     "@mapbox/jsonlint-lines-primitives": "^2.0.2",
     "@mapbox/mapbox-gl-supported": "^2.0.1",
@@ -123,33 +120,32 @@
     "build-token": "node build/generate-access-token-script.js",
     "build-benchmarks": "BENCHMARK_VERSION=${BENCHMARK_VERSION:-\"$(git rev-parse --abbrev-ref HEAD) $(git rev-parse --short=7 HEAD)\"} rollup -c bench/versions/rollup_config_benchmarks.js",
     "watch-benchmarks": "BENCHMARK_VERSION=${BENCHMARK_VERSION:-\"$(git rev-parse --abbrev-ref HEAD) $(git rev-parse --short=7 HEAD)\"} rollup -c bench/rollup_config_benchmarks.js -w",
-    "build-loaders": "rollup -c rollup.config.loaders.js",
     "start-server": "st --no-cache -H 0.0.0.0 --port 9966 --index index.html .",
-    "start": "run-p build-token build-loaders watch-css watch-dev watch-benchmarks start-server",
-    "start-debug": "run-p build-token build-loaders watch-css watch-dev start-server",
-    "start-bench": "run-p build-token build-loaders watch-benchmarks start-server",
-    "start-release": "run-s build-token build-loaders build-prod-min build-css print-release-url start-server",
+    "start": "run-p build-token watch-css watch-dev watch-benchmarks start-server",
+    "start-debug": "run-p build-token watch-css watch-dev start-server",
+    "start-bench": "run-p build-token watch-benchmarks start-server",
+    "start-release": "run-s build-token build-prod-min build-css print-release-url start-server",
     "lint": "eslint --cache --ignore-path .gitignore src test bench 3d-style debug/*.html",
     "lint-css": "stylelint 'src/css/mapbox-gl.css'",
     "test": "run-s lint lint-css test-flow test-unit",
-    "test-suite": "run-s build-loaders test-render test-query test-expressions",
+    "test-suite": "run-s test-render test-query test-expressions",
     "test-suite-clean": "find test/integration/{render,query, expressions}-tests -mindepth 2 -type d -exec test -e \"{}/actual.png\" \\; -not \\( -exec test -e \"{}/style.json\" \\; \\) -print | xargs -t rm -r",
     "test-unit": "build/run-tap --reporter classic --no-coverage test/unit",
     "test-build": "build/run-tap --no-coverage test/build/**/*.test.js",
     "test-browser": "build/run-tap --jobs=1 --reporter spec --no-coverage -- test/browser/**/*.test.js",
-    "watch-render": "npm run build-loaders && cross-env SUITE_NAME=render testem -f test/integration/testem/testem.js",
+    "watch-render": "cross-env SUITE_NAME=render testem -f test/integration/testem/testem.js",
     "watch-query": "SUITE_NAME=query testem -f test/integration/testem/testem.js",
-    "test-render": "npm run build-loaders && cross-env SUITE_NAME=render testem ci -f test/integration/testem/testem.js",
-    "test-render-firefox": "npm run build-loaders && cross-env BROWSER=Firefox SUITE_NAME=render testem ci -f test/integration/testem/testem.js",
-    "test-render-safari": "npm run build-loaders && cross-env BROWSER=Safari SUITE_NAME=render testem ci -f test/integration/testem/testem.js",
-    "test-render-prod": "npm run build-loaders && BUILD=production SUITE_NAME=render testem ci -f test/integration/testem/testem.js",
-    "test-render-csp": "npm run build-loaders && BUILD=csp SUITE_NAME=render testem ci -f test/integration/testem/testem.js",
+    "test-render": "cross-env SUITE_NAME=render testem ci -f test/integration/testem/testem.js",
+    "test-render-firefox": "cross-env BROWSER=Firefox SUITE_NAME=render testem ci -f test/integration/testem/testem.js",
+    "test-render-safari": "cross-env BROWSER=Safari SUITE_NAME=render testem ci -f test/integration/testem/testem.js",
+    "test-render-prod": "BUILD=production SUITE_NAME=render testem ci -f test/integration/testem/testem.js",
+    "test-render-csp": "BUILD=csp SUITE_NAME=render testem ci -f test/integration/testem/testem.js",
     "test-query": "SUITE_NAME=query testem ci -f test/integration/testem/testem.js",
     "test-expressions": "build/run-node test/expression.test.js",
     "test-flow": "build/run-node build/generate-flow-typed-style-spec && flow .",
     "test-cov": "nyc --require=@mapbox/flow-remove-types/register --reporter=text-summary --reporter=lcov --cache run-s test-unit test-expressions test-query test-render",
     "test-style-spec": "cd src/style-spec && npm test",
-    "prepublishOnly": "run-s build-flow-types build-loaders build-dev build-prod-min build-prod build-csp build-css build-style-spec",
+    "prepublishOnly": "run-s build-flow-types build-dev build-prod-min build-prod build-csp build-css build-style-spec",
     "print-release-url": "node build/print-release-url.js",
     "check-bundle-size": "node build/check-bundle-size.js",
     "codegen": "build/run-node build/generate-style-code.js && build/run-node build/generate-struct-arrays.js"
